# rtnpr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  binding.cpp  gui.py  main.cpp  nb_module.cpp  nbind.cpp  read_obj.py  test.cpp
assets/: bunny_2k.ply
ext/delfem2/include/delfem2/: thread.h
ext/delfem2/include/delfem2/opengl/: tex.cpp
ext/delfem2/include/delfem2/opengl/new/: funcs.cpp
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
rtnpr/: CMakeLists.txt  brdf.hpp  camera.hpp  controls.hpp  hit.hpp  image.hpp  light.hpp  linetest.hpp  object.hpp  options.hpp  pathtrace.hpp  plane.cpp  plane.h  raystencil.hpp  raytracer.cpp  raytracer.h  raytracer.hpp  rtnpr_math.hpp  sampler.hpp  scene.hpp  thread.hpp  tonemapper.hpp  trimesh.cpp  trimesh.h  visualizer.hpp
src/: brdf.hpp  camera.hpp  gui.cpp  gui.h  hit.hpp  light.hpp  linetest.hpp  object.hpp  options.hpp  pathtrace.hpp  plane.cpp  plane.h  ray.hpp  raytracer.cpp  raytracer.h  rtnpr_math.hpp  sampler.hpp  scene.hpp  tonemapper.hpp  transform.hpp  trimesh.cpp  trimesh.h  viewer.cpp  viewer.h
viewer/: CMakeLists.txt  animation.hpp  command.hpp  gui.cpp  gui.h  renderer_params.hpp  tex.hpp  viewer.cpp  viewer.h
